# nux

./: .clang-format  .clangd  .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  build.c  cli.c  cli.h  commands.h  dump.c  editor.c  init.c  internal.h  main.c  run.c
core/: CMakeLists.txt  allocator.c  arena.c  camera.c  canvas.c  cartridge.c  config.h  context.c  core.c  core.h  ds.c  entity.c  factory.c  file.c  font.c  fonts_data.c.inc  gltf.c  gpu.c  graphics.c  id.c  input.c  instance.c  internal.h  io.c  logger.c  lua.c  lua_api.c.inc  lua_ext.c.inc  math.c  matrix.c  memory.c  mesh.c  model.c  nulib.c  nux.c  nux.h  nux_api.h  nux_api.h.old  nux_api_base.h  nux_api_ecs.h  (+24 more)
core/base/: api.h  arena.c  base.c  base.h  color.c  context.c  disk.c  ds.c  error.c  event.c  file.c  id.c  input.c  inputmap.c  internal.h  io.c  logger.c  lua.c  lua_bindings.c  lua_code.c.inc  math.c  matrix.c  memory.c  module.c  module.h  platform.h  private.h  public.h  quaternion.c  random.c  resource.c  serde_json.c  string.c  vector.c
core/base/lua/: math.lua
core/common/: allocator.c  arena.c  color.c  common.h  ds.c  math.c  matrix.c  memory.c  pcg.c  pool.c  quaternion.c  string.c  vec.c  vector.c
core/core/: arena.c  core.c  core.h  disk.c  ds.c  event.c  file.c  internal.h  io.c  logger.c  module.c  node.c  object.c  platform.h  random.c  resource.c  scene.c  serde_json.c  system.c  transform.c
core/debug/: api.h  debug.c  debug.h  internal.h  module.c  module.h
core/ecs/: api.h  ecs.c  ecs.h  ecs_gltf.c  internal.h  lua_bindings.c  lua_code.c.inc  module.h  private.h  public.h  serde.c  staticmesh.c  transform.c
core/ecs/lua/: ecs.lua
core/graphics/: api.h  buffer.c  camera.c  canvas.c  canvas_layer.c  ecs_gltf.c  font.c  gpu.c  graphics.c  graphics.h  immediate.c  internal.h  lua_bindings.c  mesh.c  module.c  module.h  palette.c  platform.h  private.h  public.h  rasterizer.c  renderer.c  scene_gltf.c  shaders_data.c.inc  staticmesh.c  texture.c  viewport.c
core/graphics/shaders/: uber.frag  uber.vert
core/gui/: api.h  gui.c  internal.h  module.c  module.h
core/import/cgltf/: CHANGES.patch  cgltf.h  gltf.c
core/import/stb/: stb_image.h
core/input/: api.h  input.c  input.h  inputmap.c  internal.h  module.c  module.h  platform.h
core/io/: api.h  disk.c  file.c  input.c  internal.h  io.c  io.h  logger.c  module.c  module.h  platform.h  serde.c  serde_json.c
core/lua/: api.h  asset.lua  internal.h  loader.lua  lua.c  lua.h  lua_api.c.inc  lua_api_base.c  lua_api_ecs.c  lua_api_graphics.c  lua_base_bindings.c  lua_bindings.c  lua_code.c.inc  lua_data.c.inc  lua_event.c  lua_ext.c.inc  lua_io_bindings.c  lua_math.c  lua_require.c  lua_vmath.c  math.lua  module.c  module.h  scene.lua
core/lua/embedded/: ecs.lua  math.lua  scene.lua  time.lua
core/lua/lsp/: api.lua  event.lua  module.lua  userdata.lua  vmath.lua
core/lua/lua/: time.lua
core/lua/scripts/: asset.lua
core/lua/vm/: lauxlib.c  lauxlib.h  lmathlib.c  lua.h  luaconf.h
core/luavm/: LICENSE.md  lauxlib.c  lbaselib.c  ldblib.c  lmathlib.c  loadlib.c  lprefix.h  lstate.c  lstate.h  ltablib.c
core/physics/: api.h  body.c  collider.c  internal.h  intersect.c  lua_bindings.c  module.c  module.h  physics.c  physics.h  rigidbody.c
core/scene/: api.h  internal.h  module.c  module.h  node.c  scene.c  scene.h  serde.c  staticmesh.c  transform.c
core/serde/: internal.h  serde.c  serde.h  serde_json.c
core/shaders/: blit.frag  blit.frag.spv  blit.slang  canvas.frag  canvas.frag.spv  canvas.slang  canvas.vert  canvas.vert.spv  common.slang  main.frag  main.frag.spv  main.slang  main.vert  main.vert.spv  uber.frag  uber.frag.spv  uber.shader  uber.slang  uber.vert  uber.vert.spv
core/stdlib/: allocator.c  arena.c  color.c  ds.c  ds_vector.c  math.c  matrix.c  memory.c  pcg.c  quaternion.c  stdlib.h  string.c  vector.c
core/ui/: gui.c  internal.h  stylesheet.c  ui.c  ui.h
core/world/: internal.h  transform.c  world.c  world.h
devtools/builder/: CMakeLists.txt  build.c  builder.c  builder.h  gltf.c  gltf.h  init.c  package.c  package.h
devtools/importer/: CMakeLists.txt  error.h  gltf.c  image.c  importer.h
devtools/package/: CMakeLists.txt  build.c  init.c  package.c  package.h
devtools/project/: CMakeLists.txt  build.c  error.c  error.h  gltf.c  gltf.h  init.c  project.c  project.h  run.c  templates_data.h
examples/cxx/: CMakeLists.txt  Makefile  main.cpp
examples/cxx/src/: main.cpp
runtimes/native/: CMakeLists.txt  app.c  blk_colormap.inc.c  command.c  config.h  core.h  cpu.c  cpu.h  fonts_data.h  gamecontrollerdb.c.inc  gamecontrollerdb.txt  gpu.c  gpu.h  gui.c  hotreload.c  inspect.c  internal.h  io.c  io.h  iop.c  iop.h  krabe_model.inc.c  lavalamp_model.inc.c  logger.c  logger.h  loop.c  main.c  nuklear.c  nuklear.h  nulib.c  platform.c  platform.h  red_model.inc.c  renderer.c  renderer.h  runtime.c  runtime.h  shaders_data.c.inc  shaders_data.h  syscall.h  (+16 more)
runtimes/native/cli/: build.c  cli.c  cli.h  dump.c  init.c  run.c
runtimes/native/core/: api.h  bios.c  bios.h  bootloader.c  bootloader.h  cartridge.c  cartridge.h  core.h  core_impl.h  cpu.c  cpu.h  gamepad.c  (+19 more)
runtimes/native/core-DELETEME/: bios.c  gamepad.c  syscall.h  vm.h  wasm.c
runtimes/vmcore/: CMakeLists.txt  cart.h  cartridge.c  cartridge.h  common.h  config.h  constants.h  controller.h  error.c  error.h  gpu.c  gpu.h  io.c  io.h  memory.c  memory.h  platform.h  runtime.cmake  types.h  vm.c  vm.h  vmcore.c  vmcore.h  wasm.c  wasm.h
runtimes/vmnative/: CMakeLists.txt  error.c  error.h  io.c  io.h  renderer.c  renderer.h  runtime.c  runtime.h  shader_data.h  shaders_data.h  window.c  window.h
runtimes/web/: CMakeLists.txt  cart.lua  compile.sh  index.html  lib.c  main.lua  nux.c  nux.wasm  script.js  square.wasm
sdk/: CMakeLists.txt  build.sh  gltf.c  image.c  internal.h  model.c  project.c  scene.c  sdk.c  sdk.h  templates_data.c.inc  templates_data.h  view_debug.c  wasm.c
sdk/editor/: app.c
sdk/include/: nux.h
tests/: CMakeLists.txt  main.c  pool.c  test.h  vector.c
(+264 files in other folders)
